# le-bon-mot

./: .gitignore  .vimspector.json  ch.adorsaz.LeBonMot.json  meson.build  meson_options.txt  org.muttum.Muttum.json
data/: ch.adorsaz.LeBonMot.appdata.xml.in  ch.adorsaz.LeBonMot.desktop.in  ch.adorsaz.LeBonMot.gschema.xml  meson.build  org.muttum.Muttum.appdata.xml.in  org.muttum.Muttum.desktop.in  org.muttum.Muttum.gschema.xml
data/icons/: meson.build
doc/: meson.build  muttum.toml.in
po/: POTFILES  fr.po  le-bon-mot.pot  meson.build  muttum.pot
src/: le_bon_mot-application.c  le_bon_mot-application.h  le_bon_mot-engine.c  le_bon_mot-engine.h  le_bon_mot-window.c  le_bon_mot-window.css  le_bon_mot-window.h  le_bon_mot-window.ui  le_bon_mot.c  le_bon_mot.gresource.xml  le_bon_mot.h  main.c  meson.build  muttum-application.c  muttum-application.h  muttum-attempt-private.h  muttum-attempt.c  muttum-attempt.h  muttum-board-private.h  muttum-board.c  muttum-board.h  muttum-engine.c  muttum-engine.h  muttum-letter.c  muttum-letter.h  muttum-window.c  muttum-window.h  muttum-window.ui  muttum.gresource.xml  muttum.h
